# github-backup-script

./: README.md  config.example.json  pyproject.toml  requirements.txt
github_backup/: __main__.py
