[tool.poetry]
name = "github-backup"
version = "0.1.0"
description = ""
authors = ["Marco Andronaco <andronacomarco@gmail.com>"]
readme = "README.md"
packages = [{include = "github_backup"}]

[tool.poetry.dependencies]
python = "^3.11"
pygithub = "^1.59.1"
gitpython = "^3.1.32"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
